Fix: Improved contrast ratio for navigation links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,10 +25,11 @@ header {
     }
 }
 
-
-
-
 /* ----------------------------------------- Navbar */
+.bg-dark {
+   background-colour: #343a40
+}
+
 .navbar {
     background-color: white;
 }
@@ -56,7 +57,6 @@ a:hover {
 li {
     margin-bottom: 0;
 }
-
 
 /* ----------------------------------------- Colors */
 
@@ -213,6 +213,7 @@ margin: 77px auto;
 .baking-tips-image {
     width: 100%;
     height: 100%;
+    
 }
 
 /* ----------------------------------------- Callout */
@@ -256,7 +257,7 @@ margin: 77px auto;
 
 .chocolate-cake-image {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 /* ----------------------------------------- Ingredients and Recipe */
